add screen interface

--- a/sources/index.html
+++ b/sources/index.html
@@ -7,6 +7,9 @@
 	</head>
 	<body>
 		<h1>Arkanoid</h1>
+		<canvas id="screen" width="300" height="300">
+			Your browser does not support canvas!
+		</canvas>
 		<script type="text/javascript" src="/assets/js/arkanoid.js"></script>
 	</body>
 </html>
