import level data

--- a/sources/html/editor/index.html
+++ b/sources/html/editor/index.html
@@ -66,7 +66,10 @@
 					</ul>
 					<ul id="actions">
 						<li class="item">
-							<button id="export"><i class="fa fa-save"></i></button>
+							<button id="export" data-action="export"></button>
+						</li>
+						<li class="item">
+							<button id="import" data-action="import"></button>
 						</li>
 					</ul>
 				</form>
