--- a/sources/html/index.html
+++ b/sources/html/index.html
@@ -9,6 +9,7 @@
 		<canvas id="screen" width="300" height="300">
 			Your browser does not support canvas!
 		</canvas>
+		<div id="lifes"></div>
 		<script type="text/javascript" src="/assets/js/arkanoid.js"></script>
 	</body>
 </html>
