view rendering moved out of the core

--- a/sources/html/sound/index.html
+++ b/sources/html/sound/index.html
@@ -8,16 +8,16 @@
 	<body>
 		<div class="ui-panel">
 			<div>
-				<span class="knob" id="knob-1"></span>
-				<span class="knob" id="knob-2"></span>
-				<span class="knob" id="knob-3"></span>
-				<span class="knob" id="knob-4"></span>
+				<span class="knob" id="knob-1" data-control="knob" data-param="filter.frequency"></span>
+				<span class="knob" id="knob-2" data-control="knob" data-param="filter.Q"></span>
+				<span class="knob" id="knob-3" data-control="knob" data-param="lfo.frequency"></span>
+				<span class="knob" id="knob-4" data-control="knob" data-param="lfo.amplitude"></span>
 			</div>
     	<div>
-				<span class="fader" id="fader-1"></span>
-				<span class="fader" id="fader-2"></span>
-				<span class="fader" id="fader-3"></span>
-				<span class="fader" id="fader-4"></span>
+				<span class="fader" id="fader-1" data-control="fader"></span>
+				<span class="fader" id="fader-2" data-control="fader"></span>
+				<span class="fader" id="fader-3" data-control="fader"></span>
+				<span class="fader" id="fader-4" data-control="fader"></span>
 			</div>
 		</div>
 		<canvas id="screen"></canvas>
