--- a/sources/html/index.html
+++ b/sources/html/index.html
@@ -4,8 +4,10 @@
 		<meta charset="utf-8">
 		<title>Arkanoid</title>
 		<link rel="stylesheet" href="/assets/css/style.css" charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 	</head>
 	<body>
+		<div id="score">0</div>
 		<canvas id="screen" width="300" height="300">
 			Your browser does not support canvas!
 		</canvas>
