--- a/sources/html/sound/index.html
+++ b/sources/html/sound/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title></title>
-		<link rel="stylesheet" href="/assets/css/sound.css" charset="utf-8">
-	</head>
-	<body>
-		<div class="ui-panel">
+<head>
+	<meta charset="utf-8">
+	<title></title>
+	<link rel="stylesheet" href="/assets/css/sound.css" charset="utf-8">
+</head>
+<body>
+	<div class="ui-panel">
+		<div data-device="synth">
 			<div>
 				<span class="knob" id="knob-1" data-control="knob" data-param="filter.frequency"></span>
 				<span class="knob" id="knob-2" data-control="knob" data-param="filter.Q"></span>
 				<span class="knob" id="knob-3" data-control="knob" data-param="lfo.frequency"></span>
 				<span class="knob" id="knob-4" data-control="knob" data-param="lfo.amplitude"></span>
 			</div>
-    	<div>
+			<div>
 				<span class="fader" id="fader-1" data-control="fader"></span>
 				<span class="fader" id="fader-2" data-control="fader"></span>
 				<span class="fader" id="fader-3" data-control="fader"></span>
 				<span class="fader" id="fader-4" data-control="fader"></span>
 			</div>
 		</div>
-		<canvas id="screen"></canvas>
-		<script type="text/javascript" src="/assets/js/sound.js"></script>
-	</body>
+		<div data-device="seq">
+			<span class="grid" id="grid" data-control="grid" data-param="pos"></span>
+		</div>
+	</div>
+	<script type="text/javascript" src="/assets/js/sound.js"></script>
+</body>
 </html>
