fix mounting view parameter + kick

--- a/sources/html/sound/index.html
+++ b/sources/html/sound/index.html
@@ -15,7 +15,7 @@
 				</div>
 				<div>
 					<span class="knob" id="knob-3" data-control="knob" data-param="lfo.frequency" width="110" height="110"></span>
-					<span class="knob" id="knob-4" data-control="knob" data-param="lfo.amp" width="110" height="110"></span>
+					<span class="knob" id="knob-4" data-control="knob" data-param="lfo.amplitude" width="110" height="110"></span>
 				</div>
 			</div>
 				<div  style="display:inline-block;">
@@ -26,8 +26,8 @@
 				</div>
 			</div>
 			<div data-device="mixer"  style="display:inline-block;">
-				<span class="fader" id="mixer-fader-1" data-control="fader" data-param="tracks.1.gain"></span>
-				<span class="fader" id="mixer-fader-2" data-control="fader" data-param="tracks.2.gain"></span>
+				<span class="fader" id="mixer-fader-1" data-control="fader" data-param="tracks.1.gain" width="50" height="225"></span>
+				<span class="fader" id="mixer-fader-2" data-control="fader" data-param="tracks.2.gain" width="50" height="225"></span>
 			</div>
 			<div data-device="seq">
 				<span class="keyboard" id="keyboard" data-control="keyboard" width="50" height="600"></span>
