--- a/sources/html/sound/index.html
+++ b/sources/html/sound/index.html
@@ -28,6 +28,7 @@
 			<div data-device="mixer"  style="display:inline-block;">
 				<span class="fader" id="mixer-fader-1" data-control="fader" data-param="tracks.1.gain" width="50" height="225"></span>
 				<span class="fader" id="mixer-fader-2" data-control="fader" data-param="tracks.2.gain" width="50" height="225"></span>
+				<span class="fader" id="mixer-fader-3" data-control="fader" data-param="tracks.3.gain" width="50" height="225"></span>
 			</div>
 			<div data-device="seq">
 				<span class="keyboard" id="keyboard" data-control="keyboard" width="50" height="600"></span>
