--- a/sources/html/index.html
+++ b/sources/html/index.html
@@ -7,13 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 	</head>
 	<body>
-		<div id="content-wrapper">
-			<div id="score">0</div>
-			<canvas id="screen" width="300" height="300">
-				Your browser does not support canvas!
-			</canvas>
-			<ul id="lifes"></ul>
-		</div>
+		<div id="content-wrapper"></div>
 		<script type="text/javascript" src="/assets/js/arkanoid.js"></script>
 	</body>
 </html>
