--- a/sources/html/editor/index.html
+++ b/sources/html/editor/index.html
@@ -9,19 +9,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P">
 	</head>
 	<body>
-			<div id="content-wrapper">
-				<div id="score">0</div>
-				<div id="palette">
-					<form>
-						<ul id="bricks"></ul>
-						<ul id="actions"></ul>
-					</form>
-				</div>
-				<canvas id="screen" width="300" height="300">
-					Your browser does not support canvas!
-				</canvas>
-				<ul id="lifes"></ul>
-			</div>
+		<div id="content-wrapper"></div>
 		<script type="text/javascript" src="/assets/js/editor.js"></script>
 	</body>
 </html>
